--- a/docs/admin/05.install/40.post_install/20.dns_config.mdx
+++ b/docs/admin/05.install/40.post_install/20.dns_config.mdx
@@ -20,7 +20,7 @@ NB: Examples here use the placeholder `your.domain.tld`, you have to replace it 
 YunoHost provides a recommended DNS configuration, available via:
 
 - the webadmin, in Domain > your.domain.tld > DNS configuration;
-- or the command line, `yunohost domain dns-conf your.domain.tld`
+- or the command line, `yunohost domain dns suggest your.domain.tld`
 
 For specific needs or specific setups, and if you know what you're doing, you
 might want or have to tweak these, or add additional ones (e.g. to handle
