Fix typo - Etcher tab

--- a/docs/admin/05.install/20.install_on/arm_board.mdx
+++ b/docs/admin/05.install/20.install_on/arm_board.mdx
@@ -43,7 +43,7 @@ You should download the Armbian **Bookworm** (Debian 12) image from your vendor'
 Now that you downloaded the image of Armbian, you should flash it on a microSD card
 
 <Tabs>
-  <TabItem value="etcher" label="With Ether (recommended)">
+  <TabItem value="etcher" label="With Etcher (recommended)">
 
     Download <Link to="https://www.balena.io/etcher/" target="_blank">Etcher</Link> for your operating system and install it.
 
