--- a/docs/admin/05.install/20.install_on/raspberry_pi.mdx
+++ b/docs/admin/05.install/20.install_on/raspberry_pi.mdx
@@ -33,7 +33,7 @@ If you wish to check the validity of our signed images, you can [download our pu
 Now that you downloaded the image of YunoHost, you should flash it on a microSD card
 
 <Tabs>
-  <TabItem value="etcher" label="With Ether (recommended)">
+  <TabItem value="etcher" label="With Etcher (recommended)">
     Download <Link to="https://www.balena.io/etcher/" target="_blank">Etcher</Link> for your operating system and install it.
 
     Plug your SD card, select your image and click "Flash"
