--- a/docs/admin/05.install/20.install_on/regular_computer.mdx
+++ b/docs/admin/05.install/20.install_on/regular_computer.mdx
@@ -37,7 +37,7 @@ If you wish to check the validity of our signed images, you can [download our pu
 Flash the image on the USB key or CD/DVD.
 
 <Tabs>
-  <TabItem value="etcher" label="With Ether (recommended)">
+  <TabItem value="etcher" label="With Etcher (recommended)">
 
     Download <Link to="https://www.balena.io/etcher/" target="_blank">Etcher</Link> for your operating system and install it.
 
