--- a/docs/admin/45.tutorials/10.theming.mdx
+++ b/docs/admin/45.tutorials/10.theming.mdx
@@ -3,7 +3,8 @@ sidebar_label: Theme the portal
 title: Customize the appearance of the user portal
 ---
 
-The portal is customizable from the webadmin on page Domains on the portal domain (top domain by defaut)
+The portal is customizable from the webadmin:
+ `Domains` > Choose a top level domain > `Features`
 
 ## Options for customization
 
