--- a/docs/admin/45.tutorials/10.theming.mdx
+++ b/docs/admin/45.tutorials/10.theming.mdx
@@ -6,7 +6,7 @@ title: Customize the appearance of the user portal
 The portal is customizable from the webadmin:
  `Domains` > Choose a top level domain > `Features`
 
-## Options for customization
+## Options for the Portal customization
 
 * Show the list of public apps to visitors
 Visitors will see a 'public apps' page when ending up on the portal instead of just the login form.
