--- a/docs/admin/45.tutorials/10.theming.mdx
+++ b/docs/admin/45.tutorials/10.theming.mdx
@@ -8,7 +8,7 @@ The portal is customizable from the webadmin:
 
 ## Options for the Portal customization
 
-* Show the list of public apps to visitors
+### Show the list of public apps to visitors
 Visitors will see a 'public apps' page when ending up on the portal instead of just the login form.
 
 * Show other domain's apps
