--- a/docs/admin/45.tutorials/10.theming.mdx
+++ b/docs/admin/45.tutorials/10.theming.mdx
@@ -11,7 +11,7 @@ The portal is customizable from the webadmin:
 ### Show the list of public apps to visitors
 Visitors will see a 'public apps' page when ending up on the portal instead of just the login form.
 
-* Show other domain's apps
+### Show other domain's apps
 
 All apps from all domains will be visible on the portal
 
