--- a/docs/admin/45.tutorials/10.theming.mdx
+++ b/docs/admin/45.tutorials/10.theming.mdx
@@ -15,7 +15,7 @@ Visitors will see a 'public apps' page when ending up on the portal instead of j
 
 All apps from all domains will be visible on the portal. Default value is `true`.
 
-* Custom title
+### Custom title
 
 Choose a Title for the Portal
 
