--- a/docs/admin/45.tutorials/10.theming.mdx
+++ b/docs/admin/45.tutorials/10.theming.mdx
@@ -19,7 +19,7 @@ All apps from all domains will be visible on the portal. Default value is `true`
 
 Choose a Title for the Portal
 
-* Custom logo
+### Custom logo
 
 Choose a image. Accept .svg, .png and .jpeg. Prefer a monochrome .svg with fill: currentColor so that the logo adapts to the themes.
 
