--- a/docs/admin/45.tutorials/10.theming.mdx
+++ b/docs/admin/45.tutorials/10.theming.mdx
@@ -21,7 +21,7 @@ Choose a Title for the Portal
 
 ### Custom logo
 
-Choose a image. Accept .svg, .png and .jpeg. Prefer a monochrome .svg with fill: currentColor so that the logo adapts to the themes.
+Choose a image. Accept .svg, .png and .jpeg. Prefer a monochrome .svg with `fill: currentColor` so that the logo adapts to the themes.
 
 * Default color theme
 
