--- a/docs/admin/45.tutorials/10.theming.mdx
+++ b/docs/admin/45.tutorials/10.theming.mdx
@@ -23,7 +23,7 @@ Choose a Title for the Portal
 
 Choose a image. Accept .svg, .png and .jpeg. Prefer a monochrome .svg with `fill: currentColor` so that the logo adapts to the themes.
 
-* Default color theme
+### Default color theme
 
 Choose a color theme. Users are allowed to choose another one in their settings.
 
