--- a/docs/admin/45.tutorials/10.theming.mdx
+++ b/docs/admin/45.tutorials/10.theming.mdx
@@ -32,7 +32,7 @@ Choose a color theme. Users are allowed to choose another one in their settings.
     * descripitive = display apps icons and a descpriction of the application
     * periodic = display tiles with name apps.
 
-* Search engine URL
+### Search engine URL
 
 This is an optional feature, allowing to display a search bar in the portal (for example if you like to use your YunoHost portal as your browser's home page). This should be an URL with an empty query string such as `https://duckduckgo.com/?q=, with q=` as duckduckgo's empty query parameter
 
