--- a/docs/admin/45.tutorials/10.theming.mdx
+++ b/docs/admin/45.tutorials/10.theming.mdx
@@ -36,7 +36,7 @@ Choose a color theme. Users are allowed to choose another one in their settings.
 
 This is an optional feature, allowing to display a search bar in the portal (for example if you like to use your YunoHost portal as your browser's home page). This should be an URL with an empty query string such as `https://duckduckgo.com/?q=, with q=` as duckduckgo's empty query parameter
 
-* Custom user intro
+### Custom user intro
 
 You can use HTML, basic styles will be applied to generic elements.
 
