--- a/docs/admin/45.tutorials/10.theming.mdx
+++ b/docs/admin/45.tutorials/10.theming.mdx
@@ -40,7 +40,7 @@ This is an optional feature, allowing to display a search bar in the portal (for
 
 You can use HTML, basic styles will be applied to generic elements.
 
-* Custom public intro
+### Custom public intro
 
 You can use HTML, basic styles will be applied to generic elements.
 
