--- a/docs/admin/03.self_hosting/10.providers/20.servers.mdx
+++ b/docs/admin/03.self_hosting/10.providers/20.servers.mdx
@@ -11,6 +11,8 @@ import {HighlightFFDN, HighlightNonProfit, HighlightCHATONS} from '@site/src/com
 
 * [ECOWAN](https://ecowan.fr) (VPS)
 
+* [Hosterfy](https://www.hosterfy.com/en/kvm-vps-hosting) (VPS)
+
 * [Scaleway Dedibox](https://www.scaleway.com/en/dedibox/operating-systems/) (dedicated server)
 
 ## YunoHost IT outsourcing
