--- a/docs/admin/05.get_started/10.providers/20.servers.mdx
+++ b/docs/admin/05.get_started/10.providers/20.servers.mdx
@@ -9,6 +9,7 @@ import {HighlightFFDN, HighlightNonProfit, HighlightCHATONS} from '@site/src/com
 
 * [Alsace Réseau Neutre](https://arn-fai.net) (VPS) <HighlightFFDN/> <HighlightCHATONS/>
 * [ECOWAN](https://ecowan.fr) (VPS)
+* [Hosterfy](https://www.hosterfy.com/en/kvm-vps-hosting) (VPS)
 * [Scaleway Dedibox](https://www.scaleway.com/en/dedibox/operating-systems/) (dedicated server)
 * [Numericoop](https://numericoop.fr/solution-sur-mesure/) (VPS) <HighlightCHATONS/>
 
