Fix broken icons in what_is_yunohost in translations

--- a/i18n/ru/docusaurus-plugin-content-docs/current/admin/02.what_is_yunohost/index.mdx
+++ b/i18n/ru/docusaurus-plugin-content-docs/current/admin/02.what_is_yunohost/index.mdx
@@ -9,17 +9,17 @@ YunoHost это **операционная система** позволяюща
 
 ## Фичи
 
-- &#8203;<SmallInline url='/img/icon-debian.png' alt="debian logo"/> Based on Debian, for a trustworthy & familiar base;
-- &#8203;<SmallInline url='/img/icon-tools.png' alt="tools logo"/> Administer your server through a **friendly web interface** as well as a handy CLI;
-- &#8203;<SmallInline url='/img/icon-package.png' alt="package logo"/> Deploy **apps in just a few clicks** from [our more than 500 apps catalog](https://apps.yunohost.org)!;
-- &#8203;<SmallInline url='/img/icon-users.png' alt="users logo"/> Manage **users** <small>(based on LDAP)</small>;
-- &#8203;<SmallInline url='/img/icon-globe.png' alt="globe logo"/> Manage **domain names**;
-- &#8203;<SmallInline url='/img/icon-medic.png' alt="medic logo"/> Create and restore **backups**;
-- &#8203;<SmallInline url='/img/icon-door.png' alt="door logo"/> Connect to all apps simultaneously through the **user portal** <small>(NGINX, SSOwat)</small>;
-- &#8203;<SmallInline url='/img/icon-mail.png' alt="mail logo"/> Includes a **full e-mail stack** <small>(Postfix, Dovecot, Rspamd, DKIM)</small>;
-- &#8203;<SmallInline url='/img/icon-messaging.png' alt="messaging logo"/>... as well as **an instant messaging server** <small>(XMPP)</small>
-- &#8203;<SmallInline url='/img/icon-lock.png' alt="lock logo"/> Manages **SSL certificates** <small>(based on Let's Encrypt)</small>;
-- &#8203;<SmallInline url='/img/icon-shield.png' alt="shield logo"/>... and **security systems** <small>(`fail2ban`, `yunohost-firewall`)</small>.
+- <SmallInline url='/img/icons/logo-debian.png' alt="debian logo"/> Based on Debian, for a trustworthy & familiar base;
+- <SmallInline url='/img/icons/icon-tools.png' alt="tools logo"/> Administer your server through a **friendly web interface** as well as a handy CLI;
+- <SmallInline url='/img/icons/icon-package.png' alt="package logo"/> Deploy **apps in just a few clicks** from [our more than 500 apps catalog](https://apps.yunohost.org)!;
+- <SmallInline url='/img/icons/icon-users.png' alt="users logo"/> Manage **users** <small>(based on LDAP)</small>;
+- <SmallInline url='/img/icons/icon-globe.png' alt="globe logo"/> Manage **domain names**;
+- <SmallInline url='/img/icons/icon-medic.png' alt="medic logo"/> Create and restore **backups**;
+- <SmallInline url='/img/icons/icon-door.png' alt="door logo"/> Connect to all apps simultaneously through the **user portal** <small>(NGINX, SSOwat)</small>;
+- <SmallInline url='/img/icons/icon-mail.png' alt="mail logo"/> Includes a **full e-mail stack** <small>(Postfix, Dovecot, Rspamd, DKIM)</small>;
+- <SmallInline url='/img/icons/icon-messaging.png' alt="messaging logo"/>... as well as **an instant messaging server** <small>(XMPP)</small>
+- <SmallInline url='/img/icons/icon-lock.png' alt="lock logo"/> Manages **SSL certificates** <small>(based on Let's Encrypt)</small>;
+- <SmallInline url='/img/icons/icon-shield.png' alt="shield logo"/>... and **security systems** <small>(`fail2ban`, `yunohost-firewall`)</small>.
 
 ## История
 
