--- a/i18n/fr/docusaurus-plugin-content-docs/current/admin/02.what_is_yunohost/index.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/admin/02.what_is_yunohost/index.mdx
@@ -8,18 +8,17 @@ description: " "
 YunoHost est un **système d’exploitation** qui vise à simplifier autant que possible **l'administration d'un serveur** pour ainsi démocratiser [l’auto-hébergement](/admin/self_hosting) tout en restant fiable, sécurisé, éthique et léger. C'est un projet de logiciel libre maintenu exclusivement par des bénévoles. Techniquement, il peut être vu comme une distribution basée sur [Debian GNU/Linux](https://debian.org) et peut s'installer sur [de nombreux types de matériel](/admin/install.
 
 ## Fonctionnalités
-
-- &#8203;<SmallInline url='/img/icon-debian.png' alt="debian logo"/> basé sur Debian, pour une base de confiance et familière;
-- &#8203;<SmallInline url='/img/icon-tools.png' alt="tools logo"/> administration via une **interface web simple et claire** ou en ligne de commande;
-- &#8203;<SmallInline url='/img/icon-package.png' alt="package logo"/> déployez des **applications en quelques clics**, parmi [un catalogue de plus de 500](https://apps.yunohost.org) !;
-- &#8203;<SmallInline url='/img/icon-users.png' alt="users logo"/> ajoutez des **utilisateurs** <small>(gérés via un annuaire LDAP)</small>;
-- &#8203;<SmallInline url='/img/icon-globe.png' alt="globe logo"/> gérez des **noms de domaine**;
-- &#8203;<SmallInline url='/img/icon-medic.png' alt="medic logo"/> créez et restaurez des **sauvegardes**;
-- &#8203;<SmallInline url='/img/icon-door.png' alt="door logo"/> connexion simultanée à toutes les apps via un **portail utilisateur** <small>(nginx, SSOwat)</small>;
-- &#8203;<SmallInline url='/img/icon-mail.png' alt="mail logo"/> fourni avec un **serveur mail complet** <small>(Postfix, Dovecot, Rspamd, DKIM)</small>;
-- &#8203;<SmallInline url='/img/icon-messaging.png' alt="messaging logo"/> ...ainsi qu’un **serveur de messagerie instantanée** <small>(XMPP)</small>;
-- &#8203;<SmallInline url='/img/icon-lock.png' alt="lock logo"/> gère les **certificats SSL** <small>(basé sur Let's Encrypt)</small>;
-- &#8203;<SmallInline url='/img/icon-shield.png' alt="shield logo"/> ... et des **systèmes de sécurité** <small>(`fail2ban`, `yunohost-firewall`)</small>.
+- <SmallInline url='/img/icons/logo-debian.png' alt="debian logo"/> basé sur Debian, pour une base de confiance et familière;
+- <SmallInline url='/img/icons/icon-tools.png' alt="tools logo"/> administration via une **interface web simple et claire** ou en ligne de commande;
+- <SmallInline url='/img/icons/icon-package.png' alt="package logo"/> déployez des **applications en quelques clics**, parmi [un catalogue de plus de 500](https://apps.yunohost.org) !;
+- <SmallInline url='/img/icons/icon-users.png' alt="users logo"/> ajoutez des **utilisateurs** <small>(gérés via un annuaire LDAP)</small>;
+- <SmallInline url='/img/icons/icon-globe.png' alt="globe logo"/> gérez des **noms de domaine**;
+- <SmallInline url='/img/icons/icon-medic.png' alt="medic logo"/> créez et restaurez des **sauvegardes**;
+- <SmallInline url='/img/icons/icon-door.png' alt="door logo"/> connexion simultanée à toutes les apps via un **portail utilisateur** <small>(nginx, SSOwat)</small>;
+- <SmallInline url='/img/icons/icon-mail.png' alt="mail logo"/> fourni avec un **serveur mail complet** <small>(Postfix, Dovecot, Rspamd, DKIM)</small>;
+- <SmallInline url='/img/icons/icon-messaging.png' alt="messaging logo"/> ...ainsi qu’un **serveur de messagerie instantanée** <small>(XMPP)</small>;
+- <SmallInline url='/img/icons/icon-lock.png' alt="lock logo"/> gère les **certificats SSL** <small>(basé sur Let's Encrypt)</small>;
+- <SmallInline url='/img/icons/icon-shield.png' alt="shield logo"/> ... et des **systèmes de sécurité** <small>(`fail2ban`, `yunohost-firewall`)</small>.
 
 ## Origine
 
