Hide some menu items for installation

--- a/docs/admin/05.install/20.install_on/index.mdx
+++ b/docs/admin/05.install/20.install_on/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: Install on...
 slug: /admin/install/install_on
+sidebar_class_name: hidden_menu_caret
 ---
 
 import DocCardList from '@theme/DocCardList'
