--- a/docs/admin/05.install/20.install_on/remote_server.mdx
+++ b/docs/admin/05.install/20.install_on/remote_server.mdx
@@ -5,6 +5,7 @@ sidebar_position: 3
 sidebar_custom_props:
   doc_card_image: /img/icons/icon-vps.png
 pagination_next: admin/install/install_on/on_top_of_debian
+sidebar_class_name: hidden
 ---
 
 import InstallScript from "./_install_script.mdx";
