--- a/docs/admin/05.install/20.install_on/arm_board.mdx
+++ b/docs/admin/05.install/20.install_on/arm_board.mdx
@@ -5,6 +5,7 @@ sidebar_position: 2
 sidebar_custom_props:
   doc_card_image: /img/icons/icon-olinuxino.png
 pagination_next: admin/install/install_on/on_top_of_debian
+sidebar_class_name: hidden
 ---
 
 import Tabs from '@theme/Tabs';
