--- a/docs/admin/05.install/20.install_on/raspberry_pi.mdx
+++ b/docs/admin/05.install/20.install_on/raspberry_pi.mdx
@@ -5,6 +5,7 @@ sidebar_position: 1
 sidebar_custom_props:
   doc_card_image: /img/icons/icon-raspberrypi.png
 pagination_next: admin/install/post_install/configuration
+sidebar_class_name: hidden
 ---
 
 import Tabs from '@theme/Tabs';
