Fix link to catalog in Applications page

--- a/docs/admin/30.apps/index.mdx
+++ b/docs/admin/30.apps/index.mdx
@@ -16,7 +16,9 @@ Applications can be installed and managed through the webadmin interface in <Hig
 The application catalog and its categories can be browsed directly from the webadmin by clicking on the <HighlightAppInstall/> button in the apps list, or from this documentation.
 
 <div class="text--center">
-<Button link="https://apps.yunohost.org" color="orange"><FAIcon icon='fa-cubes'/> Applications Catalog</Button>
+  <Button url="https://apps.yunohost.org/" color="orange">
+    <span><FAIcon icon='fa-cubes'/> Applications catalog</span>
+  </Button>
 </div>
 
 :::caution
