Hide some menu items for installation (#2611)
* Hide some menu items for installation

* Update docs/admin/05.install/20.install_on/on_top_of_debian.mdx

---------

Co-authored-by: Alexandre Aubin <4533074+alexAubin@users.noreply.github.com>

--- a/docs/admin/05.install/20.install_on/on_top_of_debian.mdx
+++ b/docs/admin/05.install/20.install_on/on_top_of_debian.mdx
@@ -5,6 +5,7 @@ sidebar_position: 6
 sidebar_custom_props:
   doc_card_image: /img/icons/logo-debian.png
 pagination_next: admin/install/post_install/configuration
+sidebar_class_name: hidden
 ---
 
 import InstallScript from "./_install_script.mdx";
