--- a/i18n/es/docusaurus-plugin-content-docs/current/admin/02.what_is_yunohost/index.mdx
+++ b/i18n/es/docusaurus-plugin-content-docs/current/admin/02.what_is_yunohost/index.mdx
@@ -3,9 +3,14 @@ title: What is YunoHost?
 description: " "
 ---
 
-<img src={require('/img/icons/logo-ynh_horizontal.png').default} alt="YunoHost logo" id="ynhlogo" style={{display: "block", textAlign: "center", margin: "auto"}}/>
+<img src={require('/img/icons/logo-ynh_horizontal.png').default} alt="YunoHost logo" id="ynhlogo" style={{display: "block", textAlign: "center", margin: "auto", max-width: "300px", margin-bottom: "1.5em"}}/>
 
-YunoHost es un **sistema operativo** que persigue simplificar la administración de un **servidor** para democratizar el [autoalojamiento](/admin/self_hosting), asegurando que se mantiene fiable, seguro, ético y ligero. Es un proyecto de software libre mantenido exclusivamente por voluntariado. Técnicamente se le puede considerar como una distribución basada en [Debian GNU/Linux](https://debian.org) y que puede ser instalado en [muchos tipos de material](/admin/install.
+YunoHost es un **sistema operativo** que persigue simplificar la administración de un **servidor** para democratizar el [autoalojamiento](/admin/self_hosting), asegurando que se mantiene fiable, seguro, ético y ligero. Es un proyecto de software libre mantenido exclusivamente por voluntariado. Técnicamente se le puede considerar como una distribución basada en [Debian GNU/Linux](https://debian.org).
+
+YunoHost can be installed on [many kinds of hardware](/admin/install/install_on), either at home or on a remote server (VPS).
+
+![General representation of a YunoHost server installation](/img/internet_topologies_with_ynh.png?resize=600)
+
 
 ## Características
 
@@ -17,7 +22,6 @@ YunoHost es un **sistema operativo** que persigue simplificar la administración
 - <SmallInline url='/img/icons/icon-medic.png' alt="medic logo"/> Create and restore **backups**;
 - <SmallInline url='/img/icons/icon-door.png' alt="door logo"/> Connect to all apps simultaneously through the **user portal** <small>(NGINX, SSOwat)</small>;
 - <SmallInline url='/img/icons/icon-mail.png' alt="mail logo"/> Includes a **full e-mail stack** <small>(Postfix, Dovecot, Rspamd, DKIM)</small>;
-- <SmallInline url='/img/icons/icon-messaging.png' alt="messaging logo"/>... as well as **an instant messaging server** <small>(XMPP)</small>
 - <SmallInline url='/img/icons/icon-lock.png' alt="lock logo"/> Manages **SSL certificates** <small>(based on Let's Encrypt)</small>;
 - <SmallInline url='/img/icons/icon-shield.png' alt="shield logo"/>... and **security systems** <small>(`fail2ban`, `yunohost-firewall`)</small>.
 
@@ -48,7 +52,7 @@ Puedes alojar a tus amistades, tu familia y a tu compañía sin problema, pero d
 
 ## Logo
 
-Logo YunoHost en blanco y negro por ToZz (400 × 400 px). Licence: CC-BY-SA 4.0. Logos and other artwork are available in [the Artworks repository](https://github.com/YunoHost/yunohost-artwork).
+Logo YunoHost en blanco y negro por ToZz. Licence: CC-BY-SA 4.0. Logos and other artwork are available in [the Artworks repository](https://github.com/YunoHost/yunohost-artwork).
 
 <img src="https://raw.githubusercontent.com/YunoHost/yunohost-artwork/refs/heads/main/logos/png/yunohost-logo_black.png" width="220" id="darklogo"/>
 <img src="https://raw.githubusercontent.com/YunoHost/yunohost-artwork/refs/heads/main/logos/png/yunohost-logo_white.png" width="220" id="whitelogo"/>
