--- a/i18n/fr/docusaurus-plugin-content-docs/current/admin/02.what_is_yunohost/index.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/admin/02.what_is_yunohost/index.mdx
@@ -45,7 +45,7 @@ Le nom **YunoHost** vient de l’argot Internet anglais « [Y U NO](https://kno
 
 YunoHost n'est *pas* une entreprise ou une entité à but lucratif. Le projet est développé et maintenu par des bénévoles. Nous ne vendons pas de services, nous n'hébergeons ni ne contrôlons vos données ou services d'aucune manière, et nous n'avons aucune intention ni aucun intérêt à monétiser quoi que ce soit. Nous n'offrons pas non plus de garanties formelles. Notre objectif est simplement de développer et de maintenir YunoHost dans l'espoir qu'il contribue à un internet plus décentralisé et qu'il permette aux plus grand nombre d'obtenir la maîtrise et l'autonomie sur leurs services numériques et la technologie. Ceci étant dit, nous faisons de notre mieux pour fournir un support communautaire, et un support commercial peut être disponible par l'intermédiaire de tiers si nécessaire.
 
-YunoHost en tant que projet n'est *pas* apolitique. Par sa nature même, YunoHost promeut un internet décentralisé et des technologies qui donnent du pouvoir au plus grand nombre. Nous rejetons l'idée selon laquelle la technologie serait intrinsèquement neutre, ou que les projets logiciels devraient rester neutres. De nombreux contributeur⋅ice⋅s au projet restent vigilant⋅e⋅s quant aux implications sociales et politiques de l'évolution des technologies, et soulignent l'importance d'être solidaire et de converger avec d'autres luttes telles que le féminisme, les droits et la visibilité des personnes LGBTQIA+, la justice environnementale et la justice sociale. Nous nous opposons fermement au fascisme, au sexisme, au racisme, à la xénophobie, à la bigoterie, à l'impérialisme, à l'extractivisme, à l'eugénisme et au libertarisme de droite. Si vous n'êtes pas en accord avec ces valeurs, nous vous encourageons à ne pas utiliser YunoHost et à chercher un autre système.
+YunoHost en tant que projet n'est *pas* apolitique. Par sa nature même, YunoHost promeut un internet décentralisé et des technologies qui donnent du pouvoir au plus grand nombre. Nous rejetons l'idée selon laquelle la technologie serait intrinsèquement neutre, ou que les projets logiciels devraient rester neutres. De nombreux contributeurices au projet restent vigilant⋅e⋅s quant aux implications sociales et politiques de l'évolution des technologies, et soulignent l'importance d'être solidaire et de converger avec d'autres luttes telles que le féminisme, les droits et la visibilité des personnes LGBTQIA+, la justice environnementale et la justice sociale. Nous nous opposons fermement au fascisme, au sexisme, au racisme, à la xénophobie, à la [bigoterie](https://fr.wikipedia.org/wiki/Bigoterie), au validisme, à l'impérialisme, à l'extractivisme, à l'eugénisme et au [libertarianisme](https://fr.wikipedia.org/wiki/Libertarianisme) de droite. Si vous n'êtes pas en accord avec ces valeurs, nous vous encourageons à ne pas utiliser YunoHost et à chercher un autre système.
 
 YunoHost n'est *pas* conçu pour « passer à l'échelle » au sens traditionnel du terme. Il est conçu pour un nombre relativement modeste de comptes et d'utilisateur⋅ice⋅s simultanés. Bien qu'il n'y ait pas de limite stricte - puisque les performances dépendent fortement de votre configuration spécifique - nous estimons que des ajustements techniques peuvent s'avérer nécessaires à partir de 250 à 500 comptes, ou de ~50 utilisateur⋅ice⋅s simultanés sur des applications gourmandes. Ceci étant dit, YunoHost peut aisément héberger des sites web ou autres services légers recevant des milliers de visites quotidiennes.
 
